Basic page setup for testing

--- a/index.html
+++ b/index.html
@@ -1,7 +1,20 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <link rel="stylesheet" href="PageStyle.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
+    <link rel="icon" href="/images/favicon.ico" type="image/ico">
+    <h1 class="Montserrat">Renosirp.com</h1>
+    <title>Home</title>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <h2 class="Montserrat">Welcome to my web page!</h1>
+        <p class="Bordered Montserrat"> About Me: <br>
+            My name is Henry, but online I go by Renosirp. <br>
+            I got my name from Skyrim (TES V), where the default name is 'Prisoner',
+            and since I'm not creative at all I simply wrote the name backwards.
+        </p>
 </body>
 </html>
