Contact Page and Nav Bar

--- a/contact.html
+++ b/contact.html
@@ -7,21 +7,24 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
     <link rel="icon" href="/images/favicon.ico" type="image/ico">
     <ul>
-        <li><a class="active" href="index.html">Home</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a class="active" href="contact.html">Contact</a></li>
         <li style="float:right"><a class="ytActive" target="_blank" href="https://www.youtube.com/c/Renosirp">YouTube</a></li>
         <li style="float:right"><a class="gitActive" target="_blank" href="https://github.com/RenosirpTTV">GitHub</a></li>
         <li style="float:right"><a class="twitchActive" target="_blank" href="https://m.twitch.tv/renosirpttv/home">Twitch</a></li>
     </ul>
-    <h1 class="Montserrat GAP">Home</h1>
+    <h1 class="Montserrat GAP">Contact</h1>
     <title>Home</title>
 </head>
 <body>
-    <h2 class="Montserrat">Welcome to my web page!</h1>
-        <p class="Bordered Montserrat"> About Me: <br>
-            My name is Henry, but online I go by Renosirp. <br>
-            I got my name from Skyrim (TES V), where the default name is 'Prisoner',
-            and since I'm not creative at all I simply wrote the name backwards.
+    <h3 class="Montserrat">If you need to get in touch with me, feel free to use the contact options below:</h1>
+    <fieldset class="contactDisplay">
+        <p class="Bordered Montserrat"> Discord: <br>
+            Renosirp#8444
         </p>
+        <p class="Bordered Montserrat"> Email: <br>
+            henry@booher.co.uk
+        </p>
+    </fieldset>
 </body>
 </html>
