--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
+
+    <!-- Navigation -->
+
     <nav class="navbar">
         <div class="navbar__container">
             <a href="/" id="navbar__logo" class="top"><img src="images/favicon.png" class="fas fa-renoicon" alt="Icon of Renosirp"></i>Renosirp.com</a>
@@ -23,10 +26,13 @@
               <li class="navbar__item"><a href="/contact.html" class="navbar__links">Contact</a></li>
               <li class="navbar__item"><a href="/projects.html" class="navbar__links">Projects</a></li>
               <li class="navbar__item"><a href="/about.html" class="navbar__links">About</a></li>
-              <li class="navbar__btn"><a href="/" class="button">Sign Up</a></li>
+              <li class="navbar__btn"><a href="/" class="button">More</a></li>
             </ul>
         </div>
     </nav>
+
+    <!-- Hero -->
+
     <div class="main">
         <div class="main__container">
             <div class="main__content">
@@ -40,21 +46,31 @@
             </div>
         </div>
     </div>
+
+    <!-- Services -->
+
     <div class="services">
-        <h1>This is H1 Testing</h1>
+        <h1>See more</h1>
         <div class="services__container">
-            <div class="services__card">
-                <h2>This is H2 Testing</h2>
-                <p>This is P Testing</p>
-                <button>Button Testing</button>
-            </div>
-            <div class="services__card">
-                <h2>This is H2 Testing</h2>
-                <p>This is P Testing</p>
-                <button>Button Testing</button>
-            </div>
+                <div class="services__card">
+                    <h2>Projects</h2>
+                    <p>A view of my projects</p>
+                    <a href="/projects.html">
+                        <button>Click me!</button>
+                    </a>
+                </div>
+                <div class="services__card">
+                    <h2>About Me</h2>
+                    <p>More about me</p>
+                    <a href="/about.html">
+                        <button>Click me!</button>
+                    </a>
+                </div>
         </div>
     </div>
+
+    <!-- Footer -->
+
     <div class="footer__container">
         <div class="footer__links">
             <div class="footer__link--wrapper">
