--- a/about.html
+++ b/about.html
@@ -35,10 +35,13 @@
 
     <div class="main">
         <div class="main__container">
-            <div class="main__content">
+            <div class="main__content pad__right about">
                 <h1>About</h1>
                 <h2>Who am I?</h2>
-                <p>This is filler content!</p>
+                <p class="about">Online I go by Renosirp, but my real name is Henry.</p>
+                <p class="about">I'm a musician, gamer, and programmer from the UK, and love all things tech.</p>
+                <p class="about">I got the name Renosirp from one of my all time favs, Skyrim. The default name is prisoner, and I flipped this for my character, to Renosirp!</p>
+                <p class="about">I've been fascinated by technology since I was a kid, and ever since have loved learning all about how they work on a hardware and software level.</p>
             </div>
             <div class="main__img--container">
                 <img src="images/person.svg" alt="pic" id="main__img">
@@ -51,20 +54,20 @@
     <div class="services">
         <h1>See more</h1>
         <div class="services__container">
-                <div class="services__card">
-                    <h2>Projects</h2>
-                    <p>A view of my projects</p>
-                    <a href="/projects.html">
-                        <button>Click me!</button>
-                    </a>
-                </div>
-                <div class="services__card">
-                    <h2>About Me</h2>
-                    <p>More about me</p>
-                    <a href="/about.html">
-                        <button>Click me!</button>
-                    </a>
-                </div>
+            <div class="services__card">
+                <h2>Projects</h2>
+                <p>A view of my projects</p>
+                <a href="/projects.html">
+                    <button>Click me!</button>
+                </a>
+            </div>
+            <div class="services__card">
+                <h2>About Me</h2>
+                <p>More about me</p>
+                <a href="/about.html">
+                    <button>Click me!</button>
+                </a>
+            </div>
         </div>
     </div>
 
@@ -115,6 +118,9 @@
                 </a>
                 <a href="https://github.com/RenosirpTTV" class="social__icon--link" target="_blank">
                     <i class="fa-brands fa-github"></i>
+                </a>
+                <a href="https://steamcommunity.com/id/renosirp" class="social__icon--link" target="_blank">
+                    <i class="fa-brands fa-steam"></i>
                 </a>
             </div>
         </div>
