--- a/index.html
+++ b/index.html
@@ -117,6 +117,9 @@
                 <a href="https://github.com/RenosirpTTV" class="social__icon--link" target="_blank">
                     <i class="fa-brands fa-github"></i>
                 </a>
+                <a href="https://steamcommunity.com/id/renosirp" class="social__icon--link" target="_blank">
+                    <i class="fa-brands fa-steam"></i>
+                </a>
             </div>
         </div>
     </div>
